--- a/.github/workflows/casual-build-alpha.yaml
+++ b/.github/workflows/casual-build-alpha.yaml
@@ -8,7 +8,7 @@ on:
       - '!patch/*/main'
 env:
   build_type: alpha
-  centos_image: casual/centos-builder
+  ubi_image: casual/ubi8-builder
   suse_image: casual/suse-builder
 
 jobs:
@@ -74,12 +74,12 @@ jobs:
         with:
           args: "Starting a new build, Repo: ${{ github.repository }}, Branch: ${{ github.ref_name }}, Version: ${{ needs.calculate-version.outputs.build_version }}, URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"           
   
-  build-centos:
+  build-ubi:
     runs-on: [self-hosted, builder]
     if: ${{ success() }}
     needs: [calculate-version,notification-start]
     env:
-      DISTRIBUTION: 'centos'
+      DISTRIBUTION: 'ubi'
     steps:
       - name: check out repository casual
         uses: actions/checkout@v4
@@ -108,6 +108,8 @@ jobs:
 
           set -e
 
+          git config --global --add safe.directory /git/casual/casual
+
           source /git/casual/casual/pipeline/script/pipeline.env
 
           bash /git/casual/casual/pipeline/script/pre/cleanup
@@ -126,7 +128,7 @@ jobs:
 
       - name: Build
         run: |
-          docker run --rm -v ${{ github.workspace }}:/git/casual:Z -i ${{ env.centos_image}}:${{ needs.calculate-version.outputs.major_minor }}
+          docker run --rm -v ${{ github.workspace }}:/git/casual:Z -i ${{ env.ubi_image}}:${{ needs.calculate-version.outputs.major_minor }}
 
       - name: Logpublisher
         if: ${{ failure() || cancelled() }}
@@ -145,7 +147,7 @@ jobs:
       - name: Save artifact
         uses: actions/upload-artifact@v4
         with:
-          name: centos_rpm
+          name: ubi_rpm
           path: ./**/casual-middleware*.rpm
 
   build-suse:
@@ -224,7 +226,7 @@ jobs:
 
   notification-end:
     runs-on: ubuntu-latest
-    needs: [calculate-version,build-centos,build-suse]
+    needs: [calculate-version,build-ubi,build-suse]
     if: ${{ always() }}
     steps: 
       - uses: martialonline/workflow-status@v4
