--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -94,6 +94,7 @@ target = make.LinkLibrary( 'bin/casual-domain-admin-cli',
       common_library,
       'casual-common',
       'casual-configuration',
+      'casual-configuration-cli',
       'casual-serviceframework'
    ]
 )
