--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -6,6 +6,7 @@ make.IncludePaths( [
     'include',
     'unittest/include',
     '../configuration/include',
+    '../configuration/unittest/include',
     '../xatmi/include',
     '../serviceframework/include',
     '../common/include',
@@ -103,9 +104,10 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       make.Compile( 'unittest/source/cli/test_call.cpp'),
       make.Compile( 'unittest/source/cli/test_domain.cpp'),
       make.Compile( 'unittest/source/cli/test_discovery.cpp'),
-      make.Compile( 'unittest/source/cli/configuration/test_normalize.cpp'),
       make.Compile( 'unittest/source/cli/test_queue.cpp'),
+      make.Compile( 'unittest/source/cli/configuration/test_normalize.cpp'),
       make.Compile( 'unittest/source/cli/configuration/test_set_operations.cpp'),
+      make.Compile( 'unittest/source/cli/configuration/test_runtime.cpp'),
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
       make.Compile( 'unittest/source/cli/test_transaction.cpp'),
       make.Compile( 'unittest/source/cli/test_gateway.cpp'),
@@ -121,6 +123,7 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       'casual-service-unittest',
       'casual-gateway-unittest',
       'casual-serviceframework',
+      'casual-configuration',
    ])
 
 
