--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -39,7 +39,7 @@ install_headers = []
 common_archive = make.LinkArchive( 'bin/casual-http-common',
     [
        make.Compile( 'source/common.cpp'),
-       make.Compile( 'source/code.cpp', directive = ['-Wno-dangling-reference']),
+       make.Compile( 'source/code.cpp'),
      ])
 
 common_outbound_archive = make.LinkArchive( 'bin/casual-http-outbound-common',
