--- a/pipeline/script/pipeline.env
+++ b/pipeline/script/pipeline.env
@@ -10,3 +10,4 @@ export CASUAL_MAKE_OPTIONAL_LIBRARY_PATHS="${CASUAL_THIRDPARTY}/googletest/bin"
 export CASUAL_HOME=/opt/casual
 export PATH=$CASUAL_MAKE_HOME:$CASUAL_BUILD_HOME/middleware/tools/bin:$CASUAL_TOOLS_HOME/bin:$CASUAL_HOME/bin:$PATH
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CASUAL_HOME/lib:$CASUAL_BUILD_HOME/middleware/buffer/bin:$CASUAL_BUILD_HOME/middleware/configuration/bin:$CASUAL_BUILD_HOME/middleware/domain/bin:$CASUAL_BUILD_HOME/middleware/event/bin:$CASUAL_BUILD_HOME/middleware/service/bin:$CASUAL_BUILD_HOME/middleware/common/bin:$CASUAL_BUILD_HOME/middleware/serviceframework/bin:$CASUAL_BUILD_HOME/middleware/xatmi/bin:$CASUAL_BUILD_HOME/middleware/queue/bin:$CASUAL_BUILD_HOME/middleware/transaction/bin:/usr/local/lib
+export CASUAL_MAKE_CONFIGURATION_PATH=$REPOSITORY_ROOT/.casual-make/configuration.json
