--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -200,7 +200,7 @@ target_simple_server = make.LinkExecutable( 'bin/test-simple-server',
 
 target_test_domain = make.LinkUnittest( 'bin/test-casual-domain', 
     [ 
-        make.Compile( 'unittest/source/manager/test_state.cpp', directive = ['-Wno-dangling-reference']),
+        make.Compile( 'unittest/source/manager/test_state.cpp'),
         make.Compile( 'unittest/source/manager/test_manager.cpp'),
         make.Compile( 'unittest/source/manager/test_api.cpp'),
         make.Compile( 'unittest/source/test_discovery.cpp'),
