gateway: add missing paths used in unittest
added missing paths that caused testcase to fail

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -32,7 +32,9 @@ make.LibraryPaths([
     '../service/bin',
     '../serviceframework/bin',
     '../xatmi/bin',
-    '../queue/bin']
+    '../queue/bin',
+    '../buffer/bin',
+    '../transaction/bin']
     + make.optional_library_paths()
     + dsl.paths().library.gtest
    )
