--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -123,6 +123,7 @@ casual_common_objectfiles = [
     make.Compile( 'source/code/signal.cpp'),
     make.Compile( 'source/code/convert.cpp'),
     make.Compile( 'source/code/serialize.cpp'),
+    make.Compile( 'source/code/queue.cpp'),
 
     
     make.Compile( 'source/exception/capture.cpp'),
