--- a/middleware/http/source/inbound/nginx/plugin/config
+++ b/middleware/http/source/inbound/nginx/plugin/config
@@ -2,7 +2,18 @@ ngx_module_name=ngx_http_casual_module
 ngx_module_type=HTTP
 ngx_module_srcs="$ngx_addon_dir/$ngx_module_name.c"
 ngx_module_incs="$ngx_addon_dir $CASUAL_MAKE_SOURCE_ROOT/middleware/http/include"
-ngx_module_libs="-L$CASUAL_MAKE_SOURCE_ROOT/middleware/http/bin -lcasual-http-inbound-common"
+ngx_module_libs="-L$CASUAL_MAKE_SOURCE_ROOT/middleware/http/bin -lcasual-http-inbound-common" 
+
+platform=`uname`
+
+echo "Building nginx on platform = $platform"
+
+if [[ "$platform" != "Darwin" ]]; then
+    ngx_module_libs="$ngx_module_libs \
+        -Wl,-rpath-link=$CASUAL_MAKE_SOURCE_ROOT/middleware/buffer/bin \
+        -Wl,-rpath-link=$CASUAL_MAKE_SOURCE_ROOT/middleware/xatmi/bin \
+        -Wl,-rpath-link=$CASUAL_MAKE_SOURCE_ROOT/middleware/common/bin"
+fi
 
 . auto/module
 
