refactoring: binary type std::vector< char> -> std::vector< std::byte>
This is a major refactoring, since we use platform::binary::type in a
lot of places.

Why? To have a distinct type that represent binary is clearer and less
error prone. std::as_bytes can be used seamless to handle trivially
copyable types to and from binary.
Also the binary type does not look like a string-like type, and should
not be used as such (which we did/do) in some places.

A lot of hacking in `buffer` (fielded & CO) where the implementation
is very C:ish. I didn't want to rewrite the whole thing...

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -60,7 +60,7 @@ casual_common_objectfiles = [
     make.Compile( 'source/server/lifetime.cpp'),
     make.Compile( 'source/server/service.cpp'),
     make.Compile( 'source/server/argument.cpp'),
-    make.Compile( 'source/server/start.cpp'),
+    make.Compile( 'source/server/start.cpp', directive=[ '-ftemplate-backtrace-limit=0' ]),
     make.Compile( 'source/server/handle/service.cpp'),
     make.Compile( 'source/server/handle/conversation.cpp'),
     make.Compile( 'source/server/handle/policy.cpp'),
@@ -158,7 +158,7 @@ casual_common_objectfiles = [
     make.Compile( 'source/terminal.cpp'),
 
     make.Compile( 'source/serialize/archive.cpp'),
-    make.Compile( 'source/serialize/line.cpp'),
+    make.Compile( 'source/serialize/line.cpp', directive=[ '-ftemplate-backtrace-limit=0' ]),
     make.Compile( 'source/serialize/log.cpp'),
     make.Compile( 'source/serialize/ini.cpp'),
     make.Compile( 'source/serialize/json.cpp'),
