--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -92,6 +92,7 @@ install_bin.append( queue_group)
 manager_archive = make.LinkArchive( 'bin/casual-queue-manager-archive',
 [
     make.Compile( 'source/manager/transform.cpp'),
+    make.Compile( 'source/manager/configuration.cpp'),
     make.Compile( 'source/manager/handle.cpp'),
     make.Compile( 'source/manager/state.cpp'),
     make.Compile( 'source/manager/admin/server.cpp'),
