transaction: runtime configuration
This patch enables runtime configuration for transaction-manager.

Resolves #225

--- a/middleware/transaction/makefile.cmk
+++ b/middleware/transaction/makefile.cmk
@@ -41,6 +41,7 @@ manager_archive = make.LinkArchive( 'bin/manager-archive',
         make.Compile( 'source/manager/state.cpp'),
         make.Compile( 'source/manager/action.cpp'),
         make.Compile( 'source/manager/transform.cpp'),
+        make.Compile( 'source/manager/configuration.cpp'),
         make.Compile( 'source/manager/log.cpp'),
         make.Compile( 'source/manager/handle.cpp'),
         make.Compile( 'source/manager/admin/server.cpp'),
