gateway: runtime configuration
This patch enables runtime configuration for gateway-manager.

The runtime configuration for inbound/outbound groups still remains.
Runtime configuration add/remove/modify connections

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -57,6 +57,7 @@ manager_object_files = [
     make.Compile( 'source/manager/handle.cpp'),
     make.Compile( 'source/manager/admin/server.cpp'),
     make.Compile( 'source/manager/transform.cpp'),
+    make.Compile( 'source/manager/configuration.cpp'),
 ]
 
 # The gateway-manager
