gateway: handle service lookup timeout
This patch makes sure that inbound handle a timeout from service lookup.
Sends reply with 'TPETIME'

issue #296

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -32,7 +32,8 @@ make.LibraryPaths([
     '../service/bin',
     '../serviceframework/bin',
     '../xatmi/bin',
-    '../queue/bin']
+    '../queue/bin',
+    '../transaction/bin']
     + make.optional_library_paths()
     + dsl.paths().library.gtest
    )
