documentation: alias is missing for forward.groups.services/queues
This patch:

Adds the missing documentation for queue.forward.groups.queues
and documents `alias` for queue.forward.groups.services.
Adds `alias` to the queue example configuration

--- a/middleware/configuration/documentation/sample/domain/queue.ini
+++ b/middleware/configuration/documentation/sample/domain/queue.ini
@@ -33,12 +33,14 @@ delay=2s
 alias=forward-group-1
 
 [domain.queue.forward.groups.queues]
+alias=fwd-c1
 source=c1
 
 [domain.queue.forward.groups.queues.target]
 queue=a4
 
 [domain.queue.forward.groups.services]
+alias=fwd-b1
 instances=4
 source=b1
 
@@ -53,10 +55,18 @@ service=casual/example/echo
 alias=forward-group-2
 
 [domain.queue.forward.groups.services]
+note=will get alias b2
 source=b2
 
 [domain.queue.forward.groups.services.target]
 service=casual/example/echo
+
+[domain.queue.forward.groups.services]
+note=will get alias b2.2
+source=b2
+
+[domain.queue.forward.groups.services.target]
+service=casual/example/sink
 
 [domain.queue.groups]
 alias=A
