--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -63,7 +63,7 @@ casual_common_objectfiles = [
     make.Compile( 'source/server/start.cpp'),
     make.Compile( 'source/server/handle/service.cpp'),
     make.Compile( 'source/server/handle/conversation.cpp'),
-    make.Compile( 'source/server/handle/policy.cpp'),
+    make.Compile( 'source/server/handle/policy.cpp', directive=[ '-ftemplate-backtrace-limit=0']),
     
     make.Compile( 'source/executable/start.cpp'),
 
