common: argument refactoring -> implementing complete
This patch implements the _completion mechanism_.

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -288,6 +288,7 @@ unittest_objectfiles = [
     make.Compile( 'unittest/source/argument/test_cardinality.cpp'),
     make.Compile( 'unittest/source/argument/test_option.cpp'),
     make.Compile( 'unittest/source/argument/test_parse.cpp'),
+    make.Compile( 'unittest/source/argument/test_complete.cpp'),
     make.Compile( 'unittest/source/test_metric.cpp'),
 
     make.Compile( 'unittest/source/test_quantity.cpp'),
