--- a/middleware/configuration/documentation/sample/domain/queue.yaml
+++ b/middleware/configuration/documentation/sample/domain/queue.yaml
@@ -69,11 +69,13 @@ domain:
           queues:
             - alias: "fwd-c1"
               source: "c1"
+              note: "gets the alias 'c1'"
               target:
                 queue: "a4"
         - alias: "forward-group-2"
           services:
-            - source: "b2"
+            - alias: "bar"
+              source: "b2"
               note: "will get alias b2"
               target:
                 service: "casual/example/echo"
